--- a/mapp/package.json
+++ b/mapp/package.json
@@ -18,9 +18,11 @@
     "@reduxjs/toolkit": "^2.1.0",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
