--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "cd mapp && npm install && npm run build"
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "install-client": "cd mapp && npm install",
+    "build": "cd mapp && npm run build"
   }
 }
