--- a/mapp/package.json
+++ b/mapp/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -18,15 +19,16 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
-    "use-sound": "^4.0.1",
-    "postcss": "^8.4.33",
+    "serve": "^14.2.1",
     "tailwindcss": "^3.4.1",
+    "use-sound": "^4.0.1",
     "vite": "^5.0.8"
   },
   "devDependencies": {
